fix text overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -2062,8 +2062,8 @@ main {
     h2 {
       @media screen and (max-width: 575px) {
         font-weight: 500;
-        font-size: 42px;
-        line-height: 40px;
+        font-size: 40px;
+        line-height: 44px;
         .char {
           display: inline-block;
           transform: translateY(100%);
